# psje-precommit-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/psje_precommit_hooks/: check_notebooks_for_output.py
